# app/Http/Controllers/API/CartController.php
@@ -3,6 +3,8 @@
 namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
+use App\Models\Product;
+use Dotenv\Exception\ValidationException;
 use Illuminate\Http\Request;
 
 class CartController extends Controller
@@ -25,8 +27,13 @@ class CartController extends Controller
      *      ),
      *     )
      */
-    public function getCart(){
-        return session()->get('products');
+    public function getCart(Request $request){
+        $productsInCart = session()->get('products');
+        $products = Product::find(array_keys($productsInCart));
+        foreach ($products as $product) {
+            $product->quantity = $productsInCart[$product->id];
+        }
+        return $products;
     }
 
     /**
@@ -35,7 +42,7 @@ class CartController extends Controller
      *      operationId="storeProductsToCart",
      *      tags={"Cart"},
      *      summary="Store product",
-     *      description="Store cart product",
+     *      description="Add products to the cart.The type field must be 'action' or 'product'",
      *      @OA\RequestBody(
      *          required=true,
      *          @OA\JsonContent(ref="#/components/schemas/StoreCartRequest")
@@ -48,15 +55,70 @@ class CartController extends Controller
      *          response=404,
      *          description="Not Found",
      *       ),
+     *     @OA\Response(
+     *          response=400,
+     *          description="Bad Request",
+     *       ),
      * )
      */
     public function addToCart(Request $request){
-        if(session()->has('products')){
-            $products=session()->get('products',[]);
-            $products[]=$request->all();
-            session()->put('products',$products);
+        try {
+            $request->validate([
+                'id' => 'required|integer|min:1',
+                'quantity' => 'required|integer|min:1',
+            ]);
+        } catch (ValidationException $e){
+            return response()->json('Bad request', 400);
         }
-        else $request->session()->put('products',[$request->all()]);
-        return ['success'=>true];
+        $id = $request['id'];
+        if (!Product::find($id)) return response()->json('Not Found',404);
+        $products = session()->get('products', []);
+        $products[$id] = $request->quantity;
+        session()->put('products',$products);
+        return response()->json('Successfully added', 201);
+
+    }
+    /**
+     * @OA\Delete(
+     *      path="/remove-from-cart",
+     *      operationId="deleteProduct",
+     *      tags={"Cart"},
+     *      summary="Delete existing product from Cart",
+     *      description="Deletes a product",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Project id",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/DeleteCartRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      )
+     * )
+     */
+    public function removeFromCart(Request $request) {
+        $products = session()->get('products', []);
+        if (!isset($products[$request->id])) {
+            return response()->json('Bad Request', 400);
+        }
+        unset($products[$request->id]);
+        session()->put('products',$products);
+        return response()->json('Succesfully deleted', 201);
     }
 }
